@@ -563,91 +563,8 @@ hbessel2(GEN n, GEN z, long prec)
 }
 
 /***********************************************************************/
-/*                                                                    **/
-/**                    FONCTION U(a,b,z) GENERALE                     **/
-/**                         ET CAS PARTICULIERS                       **/
-/**                                                                   **/
+/**                    INCOMPLETE GAMMA FUNCTION                      **/
 /***********************************************************************/
-/* Assume gx > 0 and a,b complex; this might one day be extended to handle
- * complex gx; see Temme, "The numerical computation of the confluent
- * hypergeometric function U(a,b,z)", Numer. Math. 41 (1983), no. 1, 63-82. */
-GEN
-hyperu(GEN a, GEN b, GEN gx, long prec)
-{
-  GEN u, S, P, T, x, zf, a1, mb = gneg(b);
-  long k, n, bit, l = (typ(gx)==t_REAL)? realprec(gx): prec;
-  GEN y = (iscomplex(a) || iscomplex(b))? cgetc(l): cgetr(l);
-  pari_sp av = avma;
-
-  if (gsigne(gx) <= 0) pari_err_IMPL("non-positive third argument in hyperu");
-  a1 = gaddsg(1, gadd(a,mb));
-  P = gmul(a1, a);
-  S = gadd(a1, a);
-  n = (long)(prec2nbits_mul(l, M_LN2) + M_PI*sqrt(dblmodulus(P)));
-  bit = prec2nbits(l)-1;
-  l += EXTRAPRECWORD;
-  T = gadd(gadd(P, gmulsg(n-1, S)), sqru(n-1));
-  x = gtofp(gx, l);
-  if (cmprs(x,n) < 0)
-  {
-    pari_sp av2 = avma;
-    GEN q, v, c, s = real_1(l), t = real_0(l);
-    for (k = n-1; k >= 0; k--)
-    { /* T = (a+k)*(a1+k) = a*a1 + k(a+a1) + k^2 = previous(T) - S - 2k + 1 */
-      GEN p1 = gdiv(T, mulss(-n, k+1));
-      s = gprec_wtrunc(gaddgs(gmul(p1,s), 1), l);
-      t = gprec_wtrunc(gadd(gmul(p1,t), gaddgs(a,k)), l);
-      if (!k) break;
-      T = gsubgs(gsub(T, S), 2*k-1);
-      if (gc_needed(av2,3)) gerepileall(av2, 3, &s,&t,&T);
-    }
-    q = utor(n, l);
-    zf = gpow(utoi(n), gneg_i(a), l);
-    u = gprec_wensure(gmul(zf, s), l);
-    v = gprec_wensure(gmul(zf, gdivgs(t,-n)), l);
-    for(;;)
-    {
-      GEN p1, e, f, d = real_1(l), qmb = gadd(q,mb);
-      pari_sp av3;
-      c = divur(5,q); if (expo(c) >= -1) c = real2n(-1, l);
-      p1 = subsr(1, divrr(x,q)); if (cmprr(c,p1) > 0) c = p1;
-      togglesign(c); av3 = avma;
-      e = u;
-      f = v;
-      for(k = 1;; k++)
-      {
-        GEN w = gadd(gmul(gaddgs(a,k-1),u), gmul(gaddgs(qmb,1-k),v));
-        u = gmul(divru(q,k),v);
-        v = gdivgs(w, k);
-        d = mulrr(d, c);
-        e = gadd(e, gmul(d,u));
-        f = gadd(f, p1 = gmul(d,v));
-        if (gequal0(p1) || gexpo(p1) - gexpo(f) <= 1-prec2nbits(precision(p1)))
-          break;
-        if (gc_needed(av3,3)) gerepileall(av3,5,&u,&v,&d,&e,&f);
-      }
-      u = e;
-      v = f;
-      q = mulrr(q, addrs(c,1));
-      if (expo(x) - expo(subrr(q,x)) >= bit) break;
-      gerepileall(av2, 3, &u,&v,&q);
-    }
-  }
-  else
-  {
-    GEN zz = invr(x), s = gen_1;
-    togglesign(zz); /* -1/x */
-    zf = gpow(x, gneg_i(a), l);
-    for (k = n-1; k >= 0; k--)
-    {
-      s = gaddsg(1, gmul(gmul(T, divru(zz,k+1)), s));
-      if (!k) break;
-      T = gsubgs(gsub(T, S), 2*k-1);
-    }
-    u = gmul(s, zf);
-  }
-  gaffect(u,y); set_avma(av); return y;
-}
 
 /* incgam(0, x, prec) = eint1(x); typ(x) = t_REAL, x > 0 */
 static GEN
