@@ -2,7 +2,12 @@ Function: hyperu
 Section: transcendental
 C-Name: hyperu
 Prototype: GGGp
-Help: hyperu(a,b,x): U-confluent hypergeometric function.
-Doc: $U$-confluent hypergeometric function with
- parameters $a$ and $b$. The parameters $a$ and $b$ can be complex but
- the present implementation requires $x$ to be positive.
+Help: hyperu(a,b,z): U-confluent hypergeometric function.
+Doc: $U$-confluent hypergeometric function with complex
+ parameters $a, b, z$. Note that $_2F_0(a,b,z) = (-z)^{-a}U(a, a+1-b, -1/z)$,
+ \bprog
+ ? hyperu(1, 3/2, I)
+ %1 = 0.23219... - 0.80952...*I
+ ? -I * hypergeom([1, 1+1-3/2], [], -1/I)
+ %2 = 0.23219... - 0.80952...*I
+ @eprog
